# SlideLink

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: aliases_stem.json  headings_config.json
scripts/: slidelink_run.py
slidelink/: core.py
tests/: test_core.py
